39-human-review: Change backend to be consistent